--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <ul class="info-list">
-                        <li><span class="title">Age</span><span class="value">24</span></li>
+                        <li><span class="title">Age</span><span class="value">25</span></li>
                         <li><span class="title">Residence</span><span class="value">India</span></li>
                         <li><span class="title">Address</span><span class="value">Bengaluru, Karnataka, IN</span></li>
                         <li><span class="title">e-mail</span><span class="value"><a href="mailto:sundayakent@gmail.com">sundayakent@gmail.com</a></span></li>
@@ -714,7 +714,7 @@
       <!-- /Main Content -->
     </div>
     <footer>
-      <div class="copyrights">© 2019 All Rights Reserved. Sunday Lalbiaknia</div>
+      <div class="copyrights">© 2013 - 2020 All Rights Reserved. Sunday Lalbiaknia</div>
     </footer>
 
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
