--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-    <title>Sunday Lalbiaknia - PHP Developer </title>
+    <title>Sunday Lalbiaknia - Fullstack Developer </title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="description" content="Portfolio of Sunday Lalbiaknia" />
     <meta name="keywords" content="developer, full stack, web developer, bengaluru, bangalore, mizoram, aizawl" />
@@ -133,7 +133,7 @@
                         <p>Hello! I am Sunday Lalbiaknia. I am currently located in Bengaluru, Karnataka, India. I make websites and other amazing web applications. Thank you for visiting my website. </p>
                       </div>
                       <div class="download-resume">
-                        <a href="CV__6304157hmwwnm_.pdf" class="btn btn-secondary">Download Resume</a>
+                        <a href="Sunday Lalbiaknia CV.pdf" class="btn btn-secondary">Download Resume</a>
                       </div>
                     </div>
 
